...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_add_note"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/background_cardview"
                    android:hint="@string/title_add_note"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <EditText
                    android:id="@+id/description_add_note"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/background_cardview"
                    android:gravity="top"
                    android:hint="@string/description_add_note"
                    android:inputType="textMultiLine"
...
